crates/toml/tests/snapshots/invalid/spec-1.1.0/common-46-0.stderr
TOML parse error at line 5, column 2
  |
5 | [fruit.apple]  # INVALID
  |  ^^^^^^^^^^^
duplicate key
